--- a/src/critical.css
+++ b/src/critical.css
@@ -1,10 +1,10 @@
 :root {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'roboto', sans-serif;
 }
 
 html,
 body {
+  box-sizing: border-box;
   height: 100%;
 }
 
